Add tests for runtime conditionals.
Add a test with java constant defined in the CssResource interface
and used in a conditional css. This patch is not fixing the issue,
but it demonstrate that the issue (as defined in the bug report)
is not valid.

Bug: issue 9047
Change-Id: If14c57be8d9bad4be6e0026c73f371bf7e2f60b7

--- a/user/test/com/google/gwt/resources/converter/conditional.css
+++ b/user/test/com/google/gwt/resources/converter/conditional.css
@@ -112,3 +112,14 @@
     color: black;
   }
 }
+
+@if (CONSTANT_DEFINED_ON_INTERFACE) {
+  .blop {
+    color: red;
+  }
+}
+@elif  CONSTANT_DEFINED_ON_INTERFACE2 {
+  .blop {
+    color: blue;
+  }
+}
