Add support for simple boolean condition in GSS.
This patch introduce conditionals based on configuration property in
GSS. You can now use compile time conditionals without using the is()
function:

   @if (FOO) {
     .foo {
       padding: 15px;
     }
   }

if and only if a configuration property named FOO is defined in the
module configuration file:

  <define-configuration-property name="FOO" is-multi-valued="false"/>
  <set-configuration-property name="FOO" value="true" />

Bug: issue 9047
Change-Id: If14c57be8d9bad4be6e0026c73f371bf7e2f60b7

--- a/user/test/com/google/gwt/resources/client/gss/conditional.css
+++ b/user/test/com/google/gwt/resources/client/gss/conditional.css
@@ -8,3 +8,15 @@
     color: white;
   }
 }
+
+@if (!DISABLE_KENNEDY) {
+  .foo {
+    font-family: kennedy;
+  }
+}
+
+@if (TRUE_PROPERTY) {
+  .foo {
+    top: 5px;
+  }
+}
