--- a/user/test/com/google/gwt/resources/converter/conditional.css
+++ b/user/test/com/google/gwt/resources/converter/conditional.css
@@ -112,3 +112,37 @@
     color: black;
   }
 }
+
+@if (CONSTANT_DEFINED_ON_INTERFACE) {
+  .foo9 {
+    color: red;
+  }
+}
+@elif CONSTANT_DEFINED_ON_INTERFACE2 {
+  .foo9 {
+    color: blue;
+  }
+}
+
+@if (!WILL_MATCH_A_CONFIGURATION_PROPERTY) {
+  .foo10 {
+    color: red;
+  }
+}
+@elif WILL_MATCH_A_CONFIGURATION_PROPERTY2 {
+  .foo10 {
+    color: blue;
+  }
+}
+
+@if (!!!!!WILL_MATCH_A_CONFIGURATION_PROPERTY) {
+  .foo11 {
+    color: red;
+  }
+}
+
+@if (!!!!WILL_MATCH_A_CONFIGURATION_PROPERTY2) {
+  .foo12 {
+    color: red;
+  }
+}
