Turn GSS on by default.
In GWT 2.8, GSS will be the default way to manage the CSS of a
GWT application.
We will still support the old syntax by using the automatic
conversion (will be decomissionned in GWT 3.0)
This change set GssResourceGenerator as default generator for
CssResource and remove the unused CssResourceGenerator.
It cleans also all classes that were used by the old Generator
and cleans the related tests.

Change-Id: I3495f40c4f9ab3803296586f6c88759f01257417

--- a/user/test/com/google/gwt/resources/client/test.css
+++ b/user/test/com/google/gwt/resources/client/test.css
@@ -29,7 +29,7 @@
 @def NESTEDSPRITEWIDTH value("nested.spriteMethod.getWidth", "px");
 
 /*
- * We'll use the token FAIL to indicate text that should never be seen in the output.
+ * We'll use the token fail to indicate text that should never be seen in the output.
  */
 
 /* Test @sprite expansion */
@@ -84,29 +84,29 @@ div[foo="bar"] {
 /* Test structural modifications */
 @if (false) {
   div {
-    runtime: FAIL;
+    runtime: fail;
   }
 } @elif (true) {
   div {
-    runtime: PASSED;
+    runtime: passed;
   }
 } @else {
   div {
-    runtime: FAIL;
+    runtime: fail;
   }
 }
 
 @if CssResource.style obf OBF {
   div {
-    static: PASSED;
+    static: passed;
   }
 } @elif CssResource.style pretty PRETTY {
   div {
-    static: PASSED;
+    static: passed;
   }
 } @else {
   div {
-    static: FAIL;
+    static: fail;
   }
 }
 
@@ -136,7 +136,7 @@ div {
 }
 
 div-with-literal {
-  top: literal("expression(document.compatMode==\"CSS1Compat\" ? documentElement.scrollTop:document.body.scrollTop \\ 2)");
+  filter: literal("progid:DXImageTransform.Microsoft.Shadow(color='#888888', Direction=135, Strength=3)");
 }
 
 ns\:tag {
